--- a/.github/workflows/CD-CD.yml
+++ b/.github/workflows/CD-CD.yml
@@ -40,26 +40,26 @@ jobs:
         podman push docker.io/vutd22uit/podman-demo:${GITHUB_SHA::7}
         podman push docker.io/vutd22uit/podman-demo:latest
         
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    
-    steps:
-    - name: Set up Cloud SDK
-      uses: google-github-actions/setup-gcloud@v0
-      with:
-        service_account_key: ${{ secrets.GCP_SA_KEY }}
-        project_id: ${{ secrets.GCP_PROJECT_ID }}
-        
-    - name: Deploy to Google Compute Engine
-      env:
-        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-        GCE_INSTANCE: ${{ secrets.GCE_INSTANCE_NAME }}
-        GCE_ZONE: ${{ secrets.GCE_INSTANCE_ZONE }}
-      run: |
-        gcloud compute ssh $GCE_INSTANCE --zone $GCE_ZONE -- '
-          podman pull docker.io/$DOCKER_USERNAME/podman-demo:latest
-          podman stop podman-demo-container || true
-          podman rm podman-demo-container || true
-          podman run -d --name podman-demo-container -p 80:80 docker.io/$DOCKER_USERNAME/podman-demo:latest
-        
+deploy:
+  needs: build
+  runs-on: ubuntu-latest
+
+  steps:
+  - name: Set up Cloud SDK
+    uses: google-github-actions/setup-gcloud@v0
+    with:
+      service_account_key: ${{ secrets.GCP_SA_KEY }}
+      project_id: ${{ secrets.GCP_PROJECT_ID }}
+
+  - name: Deploy to Google Compute Engine
+    env:
+      DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+      GCE_INSTANCE: ${{ secrets.GCE_INSTANCE_NAME }}
+      GCE_ZONE: ${{ secrets.GCE_INSTANCE_ZONE }}
+    run: |
+      gcloud compute ssh $GCE_INSTANCE --zone $GCE_ZONE -- "
+        podman pull docker.io/$DOCKER_USERNAME/podman-demo:latest
+        podman stop podman-demo-container || true
+        podman rm podman-demo-container || true
+        podman run -d --name podman-demo-container -p 80:80 docker.io/$DOCKER_USERNAME/podman-demo:latest
+      "
