--- a/.github/workflows/CD-CD.yml
+++ b/.github/workflows/CD-CD.yml
@@ -59,5 +59,5 @@ jobs:
           podman pull docker.io/${{ secrets.DOCKER_USERNAME }}/podman-demo:latest
           podman stop podman-demo-container || true
           podman rm podman-demo-container || true
-          podman run -d --name podman-demo-container --cgroup-manager=cgroupfs -p 8080:80 docker.io/${{ secrets.DOCKER_USERNAME }}/podman-demo:latest
+          podman run -d --name podman-demo-container -p 8080:80 docker.io/${{ secrets.DOCKER_USERNAME }}/podman-demo:latest
         "
