--- a/.github/workflows/CD-CD.yml
+++ b/.github/workflows/CD-CD.yml
@@ -55,5 +55,6 @@ jobs:
           gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER_NAME }} --zone ${{ secrets.GKE_CLUSTER_ZONE }} --project ${{ secrets.GCP_PROJECT_ID }}
 
       - name: Deploy to GKE
-        run: |
-          kubectl apply -f path/to/deployment.yaml
+         run:|
+    kubectl apply -f deployment.yaml
+    kubectl set image deployment/$DEPLOYMENT_NAME $DEPLOYMENT_NAME=gcr.io/${{ secrets.GCP_PROJECT_ID }}/podman-demo:latest
