--- a/.github/workflows/CD-CD.yml
+++ b/.github/workflows/CD-CD.yml
@@ -1,4 +1,4 @@
-name: Podman CI/CD on Google Cloud
+name: Podman CI/CD
 
 on:
   push:
@@ -54,7 +54,8 @@ jobs:
           gcloud auth activate-service-account --key-file="${HOME}/gcp-key.json"
           gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER_NAME }} --zone ${{ secrets.GKE_CLUSTER_ZONE }} --project ${{ secrets.GCP_PROJECT_ID }}
 
-           - name: Deploy to GKE
+      - name: Deploy to GKE
         run: |
           kubectl apply -f deployment.yaml
           kubectl set image deployment/$DEPLOYMENT_NAME $DEPLOYMENT_NAME=gcr.io/${{ secrets.GCP_PROJECT_ID }}/podman-demo:latest
+
