--- a/.github/workflows/CD-CD.yml
+++ b/.github/workflows/CD-CD.yml
@@ -56,6 +56,5 @@ jobs:
 
       - name: Deploy to GKE
         run: |
-          kubectl apply -f deployment.yaml
-          kubectl set image deployment/$DEPLOYMENT_NAME $DEPLOYMENT_NAME=gcr.io/${{ secrets.GCP_PROJECT_ID }}/podman-demo:latest
-
+          kubectl apply -f deploy.yaml
+       
