--- a/.github/workflows/CD-CD.yml
+++ b/.github/workflows/CD-CD.yml
@@ -56,5 +56,5 @@ jobs:
 
       - name: Deploy to GKE
         run: |
-          kubectl apply -f deploy.yaml
+          kubectl apply -f deploy/deploy.yaml
        
